Align with 8.5.x to aid back-ports